[project]
name = "commandhelp"
version = "0.1.0"
dependencies = ["openai>=1.0.0", "langchain==1.2.0", "langchain-core>=1.2.0", "langchain-openai>=1.0.0", "langchain-community>=0.4.0", "docker"]

[project.scripts]
chelp = "LinuxAgent.App.Main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
LinuxAgent = ["llm_config.json"]
